@@ -1,19 +1,16 @@
 package sk.uniba.fmph.dcs;
 
-import java.util.ArrayList;
+import java.util.*;
 
 import org.junit.Before;
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.LinkedList;
-import java.util.List;
 import static org.junit.Assert.assertEquals;
 
 public class BoardIntegrationTest {
 
     private Board board;
-    private Floor floor;
+    private FloorInterface floor;
     private ArrayList<Points> points;
     private List<PatternLineInterface> patternLines;
     private List<WallLineInterface> wallLines;
@@ -63,27 +60,27 @@ public class BoardIntegrationTest {
     @Test
     public void testBoard() {
         // Round 1.
-        board.put(0, new ArrayList<>(List.of(Tile.YELLOW, Tile.YELLOW)));           // One tile is on the floor.
-        board.put(1, new ArrayList<>(Arrays.asList(Tile.BLACK, Tile.BLACK)));
-        board.put(2, new ArrayList<>(Arrays.asList(Tile.GREEN, Tile.GREEN, Tile.GREEN)));
-        board.put(3, new ArrayList<>(Arrays.asList(Tile.RED, Tile.RED, Tile.RED, Tile.RED)));
+        board.put(0, new ArrayList<>(List.of(Tile.YELLOW)));           // One tile is on the floor.
+        board.put(1, new ArrayList<>(Arrays.asList(Tile.BLACK, Tile.BLACK, Tile.BLACK)));
+        board.put(2, new ArrayList<>(Arrays.asList(Tile.BLUE, Tile.BLUE, Tile.BLUE, Tile.BLUE)));
+        board.put(3, new ArrayList<>(Arrays.asList(Tile.RED, Tile.RED)));
         board.put(4, new ArrayList<>(Arrays.asList(Tile.BLUE, Tile.BLUE, Tile.BLUE, Tile.BLUE, Tile.BLUE)));
 
         String expectedState = """
                 Pattern Lines:
                 I
                 LL
-                GGG
-                RRRR
+                BBB
+                RR
                 BBBBB
                 Wall Lines:
-                .....
-                .....
-                .....
-                .....
-                .....
+                  
+                  
+                  
+                  
+                  
                 Floor:
-                I
+                LB
                 Points[value=0]
                 """;
         assertEquals(expectedState, board.state());
@@ -91,47 +88,47 @@ public class BoardIntegrationTest {
         assertEquals(FinishRoundResult.NORMAL, board.finishRound());
 
         expectedState = """
-                Pattern Lines:
-                .
-                ..
-                ...
-                ....
-                .....             
-                Wall Lines:
-                .I...
-                L....
-                G....
-                R....
-                ....B
-                Floor:
-                                
-                Points[value=7]
+               Pattern Lines:
+               
+               
+               
+               RR
+               
+               Wall Lines:
+               I
+               L
+               B
+               
+               B
+               Floor:
+               
+               Points[value=2]
                 """;
         assertEquals(expectedState, board.state());
 
         // Round 2.
-        board.put(0, new ArrayList<>(List.of(Tile.RED)));
-        board.put(1, new ArrayList<>(Arrays.asList(Tile.BLUE, Tile.BLUE)));
+        board.put(0, new ArrayList<>(List.of(Tile.BLACK)));
+        board.put(1, new ArrayList<>(Arrays.asList(Tile.RED, Tile.RED)));
         board.put(2, new ArrayList<>(Arrays.asList(Tile.BLACK, Tile.BLACK, Tile.BLACK)));
-        board.put(3, new ArrayList<>(Arrays.asList(Tile.YELLOW, Tile.YELLOW, Tile.YELLOW, Tile.YELLOW)));
-        board.put(4, new ArrayList<>(Arrays.asList(Tile.RED, Tile.RED, Tile.RED, Tile.RED, Tile.RED)));
+        board.put(3, new ArrayList<>(Arrays.asList(Tile.BLUE, Tile.BLUE, Tile.BLUE, Tile.BLUE)));
+        board.put(4, new ArrayList<>(Arrays.asList(Tile.YELLOW, Tile.YELLOW, Tile.YELLOW, Tile.YELLOW, Tile.YELLOW)));
 
         expectedState = """
                 Pattern Lines:
-                R
-                BB
+                L
+                RR
                 LLL
-                IIII
-                RRRRR
+                RR
+                IIIII
                 Wall Lines:
-                .I...
-                L....
-                G....
-                R....
-                ....B
-                Floor:
+                I
+                L
+                B
                                 
-                Points[value=7]
+                B
+                Floor:
+                BBBB
+                Points[value=2]            
                 """;
         assertEquals(expectedState, board.state());
 
@@ -139,20 +136,20 @@ public class BoardIntegrationTest {
 
         expectedState = """
                 Pattern Lines:
-                .
-                ..
-                ...
-                ....
-                .....
+                
+                
+                
+                RR
+                
                 Wall Lines:
-                .IR..
-                LB...
-                GL...
-                R...I
-                .R..B
+                IL
+                LR
+                LB
+                
+                IB
                 Floor:
-                                
-                Points[value=19]
+                
+                Points[value=1]
                 """;
         assertEquals(expectedState, board.state());
 
@@ -160,13 +157,13 @@ public class BoardIntegrationTest {
         board.put(0, new ArrayList<>(List.of(Tile.GREEN)));
 
         assertEquals(FinishRoundResult.NORMAL, board.finishRound());
-        assertEquals(22, board.getPoints().getValue());
+        assertEquals(4, board.getPoints().getValue());
 
         // Round 4.
-        board.put(0, new ArrayList<>(List.of(Tile.BLACK)));
+        board.put(0, new ArrayList<>(List.of(Tile.RED)));
 
         assertEquals(FinishRoundResult.NORMAL, board.finishRound());
-        assertEquals(26, board.getPoints().getValue());
+        assertEquals(8, board.getPoints().getValue());
 
         // Round 5.
         board.put(0, new ArrayList<>(List.of(Tile.BLUE)));
